--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -9,7 +9,7 @@
 
 a {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 body {
@@ -51,4 +51,9 @@ nav > .nav-section {
 #nav-logo-section {
     justify-content: flex-start;
     font-size: 2.5rem;
+}
+
+#social-logo {
+    -webkit-filter: invert(1);
+    filter: invert(1);
 }
