--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #383838;
+  background-color: #1b1717;
   color: white;
   font-family: Georgia, 'Times New Roman', Times, serif
 }
