--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -1,8 +1,8 @@
 .card-container {
     border-style: solid;
-    /* 
-    margin: 2rem;
-    padding: 2rem;
-    width: 90%;
-    */
+    /* margin: 2rem; */
+    padding: 1rem;
+    width: 100%; 
+    display: grid;
+    gap: 2rem;
 }
