--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
 body {
   background-color: #1b1717;
   color: white;
-  font-family: Georgia, 'Times New Roman', Times, serif
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+
+@media only screen and (min-width: 600px)   {
+  ::-webkit-scrollbar {
+    width: 0px;
+  }
+}
+
 
