--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #1b1717;
-  color: white;
+  background-color: rgb(227, 227, 227);
+  color: black;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
