--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --background-color: #330366;
+    --background-color: black;
     --border-color: rgb(255, 255, 255, 0.1);
 }
 
@@ -13,7 +13,6 @@ a {
 }
 
 body {
-    
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -29,7 +28,7 @@ nav {
 }
 
 nav > .nav-section {
-    padding: 3rem 2rem;
+    padding: 1.5rem 2rem;
     display: flex;
     gap: 1rem;
     border-left: 1px solid var(--border-color);
