--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,8 +1,8 @@
 .footer {
-    /* display: block; */
+    /* display: block;
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    text-align: center;
+    text-align: center; */
  }
